5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1760_1576.log
== TEST (2019-05-22 18:36:55) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

if(v == 11):
	vj = "Pedra"
elif(v == 22):
	vj = "Papel"
elif(v == 33):
	vj = "Tesoura"

if(b == 11):
	bj = "Pedra"
elif(b == 22):
	bj = "Papel"
elif(b == 33):
	bj = "Tesoura"


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:40:38) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

if(v == 11):
	vj = "Pedra"
elif(v == 22):
	vj = "Papel"
elif(v == 33):
	vj = "Tesoura"

if(b == 11):
	bj = "Pedra"
elif(b == 22):
	bj = "Papel"
elif(b == 33):
	bj = "Tesoura"

print(vj, bj)


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:44:48) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

if(v == 11):
	vj = "Pedra"
elif(v == 22):
	vj = "Papel"
elif(v == 33):
	vj = "Tesoura"

if(b == 11):
	bj = "Pedra"
elif(b == 22):
	bj = "Papel"
elif(b == 33):
	bj = "Tesoura"

p=0
ve=0
vb=0
while(p < size(v)):
	pv = v[p]
	print(pv)
	


-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:47:00) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0
while(p < size(v)):
	pv = v[p]
	if(pv == 11):
	vj = "Pedra"
	elif(pv == 22):
	vj = "Papel"
	elif(pv == 33):
	vj = "Tesoura"

while(p < size(b)):
	pb = v[p]
	if(pb == 11):
	bj = "Pedra"
	elif(pb == 22):
	bj = "Papel"
	elif(pb == 33):
	bj = "Tesoura"
	

	
if(v == 11):
	vj = "Pedra"
elif(v == 22):
	vj = "Papel"
elif(v == 33):
	vj = "Tesoura"

if(b == 11):
	bj = "Pedra"
elif(b == 22):
	bj = "Papel"
elif(b == 33):
	bj = "Tesoura"


-- ERROR:
File "XXXX", line 12
    vj = "Pedra"
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:47:21) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0
while(p < size(v)):
	pv = v[p]
	if(pv == 11):
	vj = "Pedra"
	elif(pv == 22):
	vj = "Papel"
	elif(pv == 33):
	vj = "Tesoura"

while(p < size(b)):
	pb = v[p]
	if(pb == 11):
	bj = "Pedra"
	elif(pb == 22):
	bj = "Papel"
	elif(pb == 33):
	bj = "Tesoura"
	
print(vj, bj)

-- ERROR:
File "XXXX", line 12
    vj = "Pedra"
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:48:25) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0
while(p < size(v)):
	pv = v[p]
		if(pv == 11):
		vj = "Pedra"
		elif(pv == 22):
		vj = "Papel"
		elif(pv == 33):
		vj = "Tesoura"

while(p < size(b)):
	pb = v[p]
	if(pb == 11):
	bj = "Pedra"
	elif(pb == 22):
	bj = "Papel"
	elif(pb == 33):
	bj = "Tesoura"
	
print(vj, bj)

-- ERROR:
File "XXXX", line 11
    if(pv == 11):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:48:31) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0
while(p < size(v)):
	pv = v[p]
		if(pv == 11):
		vj = "Pedra"
		elif(pv == 22):
		vj = "Papel"
		elif(pv == 33):
		vj = "Tesoura"

while(p < size(b)):
	pb = v[p]
		if(pb == 11):
		bj = "Pedra"
		elif(pb == 22):
		bj = "Papel"
		elif(pb == 33):
		bj = "Tesoura"
	
print(vj, bj)

-- ERROR:
File "XXXX", line 11
    if(pv == 11):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:48:43) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0
while(p < size(v)):
	pv = v[p]
		if(pv == 11):
		vj = "Pedra"
		elif(pv == 22):
		vj = "Papel"
		elif(pv == 33):
		vj = "Tesoura"

while(p < size(b)):
	pb = b[p]
		if(pb == 11):
		bj = "Pedra"
		elif(pb == 22):
		bj = "Papel"
		elif(pb == 33):
		bj = "Tesoura"
	
print(vj, bj)

-- ERROR:
File "XXXX", line 11
    if(pv == 11):
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:48:56) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0
while(p < size(v)):
	pv = v[p]
	if(pv == 11):
	vj = "Pedra"
	
while(p < size(b)):
	pb = b[p]
		if(pb == 11):
		bj = "Pedra"
		elif(pb == 22):
		bj = "Papel"
		elif(pb == 33):
		bj = "Tesoura"
	
print(vj, bj)

-- ERROR:
File "XXXX", line 12
    vj = "Pedra"
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:49:25) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0
while(p < size(v)):
	pv = v[p]
	if(pv == 11):
	vj = "Pedra"

print(vj)

-- ERROR:
File "XXXX", line 12
    vj = "Pedra"
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:49:59) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0
while(p <= size(v)):
	pv = v[p]
	
	if(pv == 11):
	vj = "Pedra"
	print(vj)

-- ERROR:
File "XXXX", line 13
    vj = "Pedra"
     ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:50:15) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0
while(p <= size(v)):
	pv = v[p]
	
	if(pv == 11):
	V = "Pedra"
	print(V)

-- ERROR:
File "XXXX", line 13
    V = "Pedra"
    ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:50:29) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0
while(p <= size(v)):
	pv = v[p]
	
	if(pv == 11):
		V = "Pedra"
	print(V)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:51:16) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0
while(p < size(v)):
	pv = v[p]
	if(pv == 11):
		vj = "Pedra"
	elif(pv == 22):
		vj = "Papel"
	elif(pv == 33):
		vj = "Tesoura"

while(p < size(b)):
	pb = b[p]
	if(pb == 11):
		bj = "Pedra"
	elif(pb == 22):
		bj = "Papel"
	elif(pb == 33):
		bj = "Tesoura"

print(vj, bj)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:52:19) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
q=0
ve=0
vb=0
while(p < size(v)):
	pv = v[p]
	if(pv == 11):
		vj = "Pedra"
	elif(pv == 22):
		vj = "Papel"
	elif(pv == 33):
		vj = "Tesoura"

while(q < size(b)):
	pb = b[q]
	if(pb == 11):
		bj = "Pedra"
	elif(pb == 22):
		bj = "Papel"
	elif(pb == 33):
		bj = "Tesoura"

print(vj, bj)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:52:27) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
q=0
ve=0
vb=0
while(p < size(v)):
	pv = v[p]
	if(pv == 11):
		vj = "Pedra"
	elif(pv == 22):
		vj = "Papel"
	elif(pv == 33):
		vj = "Tesoura"

while(q < size(b)):
	pb = b[q]
	if(pb == 11):
		bj = "Pedra"
	elif(pb == 22):
		bj = "Papel"
	elif(pb == 33):
		bj = "Tesoura"

print(vj, bj)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:52:59) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
q=0
ve=0
vb=0
while(p <= size(v)):
	pv = v[p]
	if(pv == 11):
		vj = "Pedra"
	elif(pv == 22):
		vj = "Papel"
	elif(pv == 33):
		vj = "Tesoura"

while(q <= size(b)):
	pb = b[q]
	if(pb == 11):
		bj = "Pedra"
	elif(pb == 22):
		bj = "Papel"
	elif(pb == 33):
		bj = "Tesoura"

print(vj, bj)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:53:04) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
q=0
ve=0
vb=0
while(p <= size(v)):
	pv = v[p]
	if(pv == 11):
		vj = "Pedra"
	elif(pv == 22):
		vj = "Papel"
	elif(pv == 33):
		vj = "Tesoura"

while(q <= size(b)):
	pb = b[q]
	if(pb == 11):
		bj = "Pedra"
	elif(pb == 22):
		bj = "Papel"
	elif(pb == 33):
		bj = "Tesoura"

print(vj, bj)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:53:46) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
q=0
ve=0
vb=0

while(p <= size(v)):
	pv = v[p]
	if(pv == 11):
		vj = "Pedra"
	
print(vj)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:53:52) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
q=0
ve=0
vb=0

while(p <= size(v)):
	pv = v[p]
	if(pv == 11):
		vj = "Pedra"
	
print(vj)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:54:18) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
q=0
ve=0
vb=0

while(p <= size(v)):
	pv = v[p]
	if(pv == 11):
		vj = "Pedra"
	
	print(vj)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 18:54:24) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
q=0
ve=0
vb=0

while(p <= size(v)):
	pv = v[p]
	if(pv == 11):
		vj = "Pedra"
	
	print(vj)

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:03:18) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

if (v != 0):
	while(p <= size(v) and p <= size(b)):
		pv = v[p]
		pb = b[p]
		p = p + 1
		if(pv == 11):
			vj = "Pedra"
		elif(pv == 22):
			vj = "Papel"
		elif(pv == 33):
			vj = "Tesoura"
		if(pb == 11):
			bj = "Pedra"
		elif(pb == 22):
			bj = "Papel"
		elif(pb == 33):
			bj = "Tesoura"




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:03:27) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

if (v != 0):
	while(p <= size(v) and p <= size(b)):
		pv = v[p]
		pb = b[p]
		p = p + 1
		if(pv == 11):
			vj = "Pedra"
		elif(pv == 22):
			vj = "Papel"
		elif(pv == 33):
			vj = "Tesoura"
		if(pb == 11):
			bj = "Pedra"
		elif(pb == 22):
			bj = "Papel"
		elif(pb == 33):
			bj = "Tesoura"




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:03:38) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

if (v != 0):
	while(p <= size(v) and p <= size(b)):
		pv = v[p]
		pb = b[p]
		p = p + 1
		if(pv == 11):
			vj = "Pedra"
		elif(pv == 22):
			vj = "Papel"
		elif(pv == 33):
			vj = "Tesoura"
		if(pb == 11):
			bj = "Pedra"
		elif(pb == 22):
			bj = "Papel"
		elif(pb == 33):
			bj = "Tesoura"




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:03:42) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

if (v != 0):
	while(p <= size(v) and p <= size(b)):
		pv = v[p]
		pb = b[p]
		p = p + 1
		if(pv == 11):
			vj = "Pedra"
		elif(pv == 22):
			vj = "Papel"
		elif(pv == 33):
			vj = "Tesoura"
		if(pb == 11):
			bj = "Pedra"
		elif(pb == 22):
			bj = "Papel"
		elif(pb == 33):
			bj = "Tesoura"




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:05:43) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p <= size(v) and p <= size(b)):
	pv = v[p]
	pb = b[p]
	p = p + 1
	if(pv == 11):
		vj = "Pedra"
	elif(pv == 22):
		vj = "Papel"
	elif(pv == 33):
		vj = "Tesoura"
	if(pb == 11):
		bj = "Pedra"
	elif(pb == 22):
		bj = "Papel"
	elif(pb == 33):
		bj = "Tesoura"
	print(bj, vj)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-22 19:07:34) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p <= size(v) and p <= size(b)):
	pv = v[p]
	pb = b[p]
	p = p + 1
	if(pv == 11):
		vj = "Pedra"
	elif(pv == 22):
		vj = "Papel"
	elif(pv == 33):
		vj = "Tesoura"
	if(pb == 11):
		bj = "Pedra"
	elif(pb == 22):
		bj = "Papel"
	elif(pb == 33):
		bj = "Tesoura"
	print(bj, vj)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:50:24) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p <= size(v) and p <= size(b)):
	pv = v[p]
	pb = b[p]
	p = p + 1
	if(pv == 11):
		vj = "Pedra"
	elif(pv == 22):
		vj = "Papel"
	elif(pv == 33):
		vj = "Tesoura"
	if(pb == 11):
		bj = "Pedra"
	elif(pb == 22):
		bj = "Papel"
	elif(pb == 33):
		bj = "Tesoura"
	print(bj, vj)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:51:18) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p <= size(v) and p <= size(b)):
	pv = v[p]
	pb = b[p]
	p = p + 1

	print(bj, vj)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:51:42) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p <= size(v) and p <= size(b)):
	pv = v[p]
	pb = b[p]
	p = p + 1

	print(pv, pb)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:52:32) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=1
ve=0
vb=0

while(p <= size(v) and p <= size(b)):
	pv = v[p]
	pb = b[p]
	p = p + 1

	print(pv, pb)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:53:49) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

pv = v[p]
pb = b[p]
print (pv, pb)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:53:55) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

pv = v[p]
pb = b[p]
print (pv, pb)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:54:11) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

pv = v[p]
pb = b[p + 1]
print (pv, pb)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:55:03) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

print(size(V))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:55:17) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

print(size(v))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:55:39) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p <= size(v) and p <= size(b)):
	pv = v[p]
	pb = b[p]
	p = p + 1
	if(pv == 11):
		vj = "Pedra"
	elif(pv == 22):
		vj = "Papel"
	elif(pv == 33):
		vj = "Tesoura"
	if(pb == 11):
		bj = "Pedra"
	elif(pb == 22):
		bj = "Papel"
	elif(pb == 33):
		bj = "Tesoura"
	print(bj, vj)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:55:46) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p <= size(v) and p <= size(b)):
	pv = v[p]
	pb = b[p]
	p = p + 1
	if(pv == 11):
		vj = "Pedra"
	elif(pv == 22):
		vj = "Papel"
	elif(pv == 33):
		vj = "Tesoura"
	if(pb == 11):
		bj = "Pedra"
	elif(pb == 22):
		bj = "Papel"
	elif(pb == 33):
		bj = "Tesoura"
	print(bj, vj)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 09:56:12) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	pv = v[p]
	pb = b[p]
	p = p + 1
	if(pv == 11):
		vj = "Pedra"
	elif(pv == 22):
		vj = "Papel"
	elif(pv == 33):
		vj = "Tesoura"
	if(pb == 11):
		bj = "Pedra"
	elif(pb == 22):
		bj = "Papel"
	elif(pb == 33):
		bj = "Tesoura"
	print(bj, vj)




-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:03:49) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	pv = v[p]
	pb = b[p]
	p = p + 1
	if(pv == 11):
		vj = "Pedra"
	elif(pv == 22):
		vj = "Papel"
	elif(pv == 33):
		vj = "Tesoura"
	if(pb == 11):
		bj = "Pedra"
	elif(pb == 22):
		bj = "Papel"
	elif(pb == 33):
		bj = "Tesoura"
	print(bj, vj)

if (vj == 11 and bj == 33):
	ve = ve+1
if (vj == 11 and bj == 22):
	vb = vb +1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	ve = ve + 1
if (vj == 33 and bj == 22):
	vb = vb + 1

	
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:04:17) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	pv = v[p]
	pb = b[p]
	p = p + 1


if (vj == 11 and bj == 33):
	ve = ve+1
if (vj == 11 and bj == 22):
	vb = vb +1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	ve = ve + 1
if (vj == 33 and bj == 22):
	vb = vb + 1

	
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- EXECUTION TIME:
0.543851
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1760/1576/main.py", line 16, in <module>
    if (vj == 11 and bj == 33):
NameError: name 'vj' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:04:31) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	pv = v[p]
	pb = b[p]
	p = p + 1

if (vj == 11 and bj == 33):
	ve = ve+1
if (vj == 11 and bj == 22):
	vb = vb +1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	ve = ve + 1
if (vj == 33 and bj == 22):
	vb = vb + 1

print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- EXECUTION TIME:
0.478939
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1760/1576/main.py", line 15, in <module>
    if (vj == 11 and bj == 33):
NameError: name 'vj' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:04:31) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	pv = v[p]
	pb = b[p]
	p = p + 1

if (vj == 11 and bj == 33):
	ve = ve+1
if (vj == 11 and bj == 22):
	vb = vb +1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	ve = ve + 1
if (vj == 33 and bj == 22):
	vb = vb + 1

print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:05:11) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	pv = v[p]
	pb = b[p]
	p = p + 1
	if(pv == 11):
		vj = "Pedra"
	elif(pv == 22):
		vj = "Papel"
	elif(pv == 33):
		vj = "Tesoura"
	if(pb == 11):
		bj = "Pedra"
	elif(pb == 22):
		bj = "Papel"
	elif(pb == 33):
		bj = "Tesoura"
	print(bj, vj)

if (vj == 11 and bj == 33):
	ve = ve+1
if (vj == 11 and bj == 22):
	vb = vb +1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	ve = ve + 1
if (vj == 33 and bj == 22):
	vb = vb + 1

	
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:05:52) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1


if (vj == 11 and bj == 33):
	ve = ve+1
if (vj == 11 and bj == 22):
	vb = vb +1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	ve = ve + 1
if (vj == 33 and bj == 22):
	vb = vb + 1

	
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:07:45) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1


if (vj == 11 and bj == 33):
	ve = ve+1
if (vj == 11 and bj == 22):
	vb = vb + 1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	ve = ve + 1
if (vj == 33 and bj == 22):
	vb = vb + 1

print(ve, vb)
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:09:02) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1


if (vj == 11 and bj == 33):
	ve = ve+1
if (vj == 11 and bj == 22):
	vb = vb + 1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	vb = vb + 1
if (vj == 33 and bj == 22):
	ve = ve + 1

print(ve, vb)
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:11:12) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1


if (vj == 11 and bj == 33):
	ve = ve+1
if (vj == 11 and bj == 22):
	vb = vb + 1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	ve = ve + 1
if (vj == 33 and bj == 11):
	vb = vb + 1
if (vj == 33 and bj == 22):
	ve = ve + 1

print(ve, vb)
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:11:39) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1


if (vj == 11 and bj == 33):
	ve = ve+1
if (vj == 11 and bj == 22):
	vb = vb + 1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	vb = vb + 1
if (vj == 33 and bj == 22):
	ve = ve + 1

print(ve, vb)
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:13:39) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1


if (vj == 11 and bj == 33):
	ve = ve+1
if (vj == 11 and bj == 22):
	vb = vb + 1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	vb = vb + 1
if (vj == 33 and bj == 22):
	ve = ve + 1

print(ve, vb)
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:13:52) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1


if (vj == 11 and bj == 33):
	ve = ve+1
if (vj == 11 and bj == 22):
	vb = vb + 1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	vb = vb + 1
if (vj == 33 and bj == 22):
	ve = ve + 1

print(ve, vb)
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:14:02) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1


if (vj == 11 and bj == 33):
	ve = ve+1
if (vj == 11 and bj == 22):
	vb = vb + 1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	vb = vb + 1
if (vj == 33 and bj == 22):
	ve = ve + 1

print(ve, vb)
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:14:40) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1


if (vj == 11 and bj == 33):
	ve = ve+1
if (vj == 11 and bj == 22):
	vb = vb + 1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	vb = vb + 1
if (vj == 33 and bj == 22):
	ve = ve + 1

print(ve, vb)
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:14:51) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1


if (vj == 11 and bj == 33):
	ve = ve+1
if (vj == 11 and bj == 22):
	vb = vb + 1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	vb = vb + 1
if (vj == 33 and bj == 22):
	ve = ve + 1

print(ve, vb)
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:15:00) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1


if (vj == 11 and bj == 33):
	ve = ve+1
if (vj == 11 and bj == 22):
	vb = vb + 1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	vb = vb + 1
if (vj == 33 and bj == 22):
	ve = ve + 1

print(ve, vb)
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:15:12) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1


if (vj == 11 and bj == 33):
	ve = ve+1
if (vj == 11 and bj == 22):
	vb = vb + 1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	vb = vb + 1
if (vj == 33 and bj == 22):
	ve = ve + 1

print(ve, vb)
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:16:19) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1


if (vj == 11 and bj == 33):
	ve = ve + 1
if (vj == 11 and bj == 22):
	vb = vb + 1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	vb = vb + 1
if (vj == 33 and bj == 22):
	ve = ve + 1

print(ve, vb)
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:16:27) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1


if (vj == 11 and bj == 33):
	ve = ve + 1
if (vj == 11 and bj == 22):
	vb = vb + 1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	vb = vb + 1
if (vj == 33 and bj == 22):
	ve = ve + 1

print(ve, vb)
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:16:32) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1


if (vj == 11 and bj == 33):
	ve = ve + 1
if (vj == 11 and bj == 22):
	vb = vb + 1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	vb = vb + 1
if (vj == 33 and bj == 22):
	ve = ve + 1

print(ve, vb)
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:16:59) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1


if (vj == 11 and bj == 33):
	ve = ve + 1
if (vj == 11 and bj == 22):
	vb = vb + 1
if (vj == 22 and bj == 11):
	ve = ve + 1
if (vj == 22 and bj == 33):
	vb = vb + 1
if (vj == 33 and bj == 11):
	vb = vb + 1
if (vj == 33 and bj == 22):
	ve = ve + 1

print(ve, vb)
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:18:01) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1

	if (vj == 11 and bj == 33):
		ve = ve + 1
	if (vj == 11 and bj == 22):
		vb = vb + 1
	if (vj == 22 and bj == 11):
		ve = ve + 1
	if (vj == 22 and bj == 33):
		vb = vb + 1
	if (vj == 33 and bj == 11):
		vb = vb + 1
	if (vj == 33 and bj == 22):
		ve = ve + 1

print(ve, vb)
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:18:09) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1

	if (vj == 11 and bj == 33):
		ve = ve + 1
	if (vj == 11 and bj == 22):
		vb = vb + 1
	if (vj == 22 and bj == 11):
		ve = ve + 1
	if (vj == 22 and bj == 33):
		vb = vb + 1
	if (vj == 33 and bj == 11):
		vb = vb + 1
	if (vj == 33 and bj == 22):
		ve = ve + 1

print(ve, vb)
print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- EXECUTION TIME:
0.409444
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
6 3
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
5 5
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
5 7
18
BARSANULFO
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:18:47) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1

	if (vj == 11 and bj == 33):
		ve = ve + 1
	if (vj == 11 and bj == 22):
		vb = vb + 1
	if (vj == 22 and bj == 11):
		ve = ve + 1
	if (vj == 22 and bj == 33):
		vb = vb + 1
	if (vj == 33 and bj == 11):
		vb = vb + 1
	if (vj == 33 and bj == 22):
		ve = ve + 1

print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- EXECUTION TIME:
0.319029
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
Jogadas de Eusapia: Jogadas de Barsanulfo: 10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
Jogadas de Eusapia: Jogadas de Barsanulfo: 18
BARSANULFO
-- GRADE:
33%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:18:52) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1

	if (vj == 11 and bj == 33):
		ve = ve + 1
	if (vj == 11 and bj == 22):
		vb = vb + 1
	if (vj == 22 and bj == 11):
		ve = ve + 1
	if (vj == 22 and bj == 33):
		vb = vb + 1
	if (vj == 33 and bj == 11):
		vb = vb + 1
	if (vj == 33 and bj == 22):
		ve = ve + 1

print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:19:13) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1

	if (vj == 11 and bj == 33):
		ve = ve + 1
	if (vj == 11 and bj == 22):
		vb = vb + 1
	if (vj == 22 and bj == 11):
		ve = ve + 1
	if (vj == 22 and bj == 33):
		vb = vb + 1
	if (vj == 33 and bj == 11):
		vb = vb + 1
	if (vj == 33 and bj == 22):
		ve = ve + 1

print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:19:20) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1

	if (vj == 11 and bj == 33):
		ve = ve + 1
	if (vj == 11 and bj == 22):
		vb = vb + 1
	if (vj == 22 and bj == 11):
		ve = ve + 1
	if (vj == 22 and bj == 33):
		vb = vb + 1
	if (vj == 33 and bj == 11):
		vb = vb + 1
	if (vj == 33 and bj == 22):
		ve = ve + 1

print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:19:48) 
-- CODE:
from numpy import*

v = array(eval(input("Jogadas de Eusapia: ")))
b = array(eval(input("Jogadas de Barsanulfo: ")))

p=0
ve=0
vb=0

while(p < size(v) and p < size(b)):
	vj = v[p]
	bj = b[p]
	p = p + 1

	if (vj == 11 and bj == 33):
		ve = ve + 1
	if (vj == 11 and bj == 22):
		vb = vb + 1
	if (vj == 22 and bj == 11):
		ve = ve + 1
	if (vj == 22 and bj == 33):
		vb = vb + 1
	if (vj == 33 and bj == 11):
		vb = vb + 1
	if (vj == 33 and bj == 22):
		ve = ve + 1

print(size(v))
if (vb < ve):
	print("EUSAPIA")
elif (vb > ve):
	print("BARSANULFO")
elif (vb == ve):
	print ("EMPATE")
-- EXECUTION TIME:
0.541049
-- TEST CASE 1:
---- input:
[33,22,33,22,11,11,33,22,11,11,22,33]
[22,33,22,11,11,33,22,11,11,22,33,33]
---- correct output:
12
EUSAPIA
---- user output:
12
EUSAPIA
-- TEST CASE 2:
---- input:
[33,22,33,11,33,22,11,22,33,11]
[11,33,22,33,11,33,22,11,22,33]
---- correct output:
10
EMPATE
---- user output:
10
EMPATE
-- TEST CASE 3:
---- input:
[33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11,22]
[11,33,33,22,11,11,22,33,33,22,11,11,22,33,33,22,11,11]
---- correct output:
18
BARSANULFO
---- user output:
18
BARSANULFO
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
